--- a/style.css
+++ b/style.css
@@ -1,26 +1,83 @@
+html {
+    height: 100%;
+    width: 100%
+}
+
 body {
+    height: 95%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     background-color: black;
+    margin: auto;
+    
 }
 
-.header, .footer {
+.header {
     background-color: #1f2937;
     color: #F9FAF8;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex: 0;
+}
+
+.main-content {
+    background-color: #1f2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-button {
+    height: 50%;
+    width: 50%;
+    flex-grow: 0;
+    padding: 40px;
+    margin-bottom: 50px;
+}
+
+.mainImage {
+    flex-grow: 0;
+    height: 50%;
+    width: 50%;
+    padding: 40px;
+    margin-bottom: 50px;
 }
 
 .secondary-content {
     background-color: white;
+    flex: 0;
+}
+
+.images {
+    display: flex;
+}
+
+.secondary-content h3 {
+    text-align: center;
 }
 
 .testimonial-block {
     background-color: #E5E7EB;
+    flex: 0;
 }
 
 .sign-up-block {
-    background-color: #3882F6;   
+    background-color: #3882F6;
+    flex: 0;
 }
 
-div {
-    border: 1px solid red;
+.footer {
+    background-color: #1f2937;
+    color: #F9FAF8;
+    flex: 0;
+    text-align: center;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+    gap: 30px;
 }
