--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .top-section { /* Main Section */
     background-color: #1F2937;
     color: #F9FAF8;
-    flex: 2;
+    flex: 1;
 }
 
 .header {
@@ -31,6 +31,18 @@ body {
 
 .top-section p {
     color: #E5E7EB;
+}
+
+.main-content {
+    display: flex;
+    padding: 40px 20px 40px 20px;
+    justify-content: center;
+}
+
+.title-button {
+    width: 350px;
+    height: 250px;
+    margin-right: 35px;
 }
 
 .secondary-content { /* Main Section */
@@ -66,19 +78,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-div {
+/* div {
     border: 1px solid red;
-}
+} */
